--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "kerodim/php-project-lvl1",
+    "bin": [bin/brain-games],
     "authors": [
         {
             "name": "kerodim",
