--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
         }
     ],
     "license": "MIT",
-    "require": {}
+    "autoload": {
+        "files": [
+             "src/Cli.php"
+        ]
+    },
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.11"
+    }
 }
