--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         }
     ],
     "license": "MIT",
+    "scripts": {
+        "phpcs": "phpcs"
+    },
     "autoload": {
         "files": [
              "src/Cli.php"
@@ -15,5 +18,8 @@
     },
     "require": {
         "wp-cli/php-cli-tools": "^0.11.11"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5"
     }
 }
