--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
              "src/Cli.php"
         ]
     },
+    "minimum-stability": "dev",
+    "prefer-stable" : true,
     "require": {
         "wp-cli/php-cli-tools": "^0.11.11"
     },
