implementation brain-calc

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "autoload": {
         "files": [
              "src/Cli.php",
-             "src/Games/Even.php"
+             "src/Games/Even.php",
+             "src/Games/Calc.php"
         ]
     },
     "require": {
