--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "name": "kerodim/php-project-lvl1",
-    "bin": ["bin/brain-even",
-            "bin/brain-calc"],
+    "bin": [
+        "bin/brain-even",
+        "bin/brain-calc"
+    ],
     "authors": [
         {
             "name": "kerodim",
