--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "kerodim/php-project-lvl1",
     "bin": [
         "bin/brain-even",
-        "bin/brain-calc"
+        "bin/brain-calc",
+        "bin/brain-gcd"
     ],
     "authors": [
         {
@@ -19,7 +20,8 @@
         "files": [
              "src/Cli.php",
              "src/Games/Even.php",
-             "src/Games/Calc.php"
+             "src/Games/Calc.php",
+             "src/Games/GreatestCommonFactor.php"
         ]
     },
     "require": {
