implementation of the Prime game

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "authors": [
         {
@@ -23,7 +24,8 @@
              "src/Games/Even.php",
              "src/Games/Calc.php",
              "src/Games/GreatestCommonFactor.php",
-             "src/Games/Progression.php"
+             "src/Games/Progression.php",
+             "src/Games/Prime.php"
         ]
     },
     "require": {
