--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Validate composer.json and composer.lock
         run: composer validate
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest
       - name: Lint
         run: make lint
